--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="main-container">
+  <app-alerts></app-alerts>
   <header class="header-6">
     <div class="branding">
-      <a href="/" class="nav-link">
+      <a routerLink="/" class="nav-link">
         <clr-icon shape="router"></clr-icon>
         <span class="title">Routing in Angular</span>
       </a>
