--- a/src/app/users/user-edit/user-edit.component.html
+++ b/src/app/users/user-edit/user-edit.component.html
@@ -1,26 +1,26 @@
 <div *ngIf="user">
 
-  <div class="alert alert-success" *ngIf="successMessage">
-    <div class="alert-items">
-      <div class="alert-item static">
-        <div class="alert-icon-wrapper">
-          <clr-icon class="alert-icon" shape="check-circle"></clr-icon>
-        </div>
-        <span class="alert-text">{{ successMessage }}</span>
-      </div>
-    </div>
-  </div>
+  <!--<div class="alert alert-success" *ngIf="successMessage">-->
+    <!--<div class="alert-items">-->
+      <!--<div class="alert-item static">-->
+        <!--<div class="alert-icon-wrapper">-->
+          <!--<clr-icon class="alert-icon" shape="check-circle"></clr-icon>-->
+        <!--</div>-->
+        <!--<span class="alert-text">{{ successMessage }}</span>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 
-  <div class="alert alert-danger" *ngIf="errorMessage" >
-    <div class="alert-items">
-      <div class="alert-item static">
-        <div class="alert-icon-wrapper">
-          <clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>
-        </div>
-        <span class="alert-text">{{ errorMessage }}</span>
-      </div>
-    </div>
-  </div>
+  <!--<div class="alert alert-danger" *ngIf="errorMessage" >-->
+    <!--<div class="alert-items">-->
+      <!--<div class="alert-item static">-->
+        <!--<div class="alert-icon-wrapper">-->
+          <!--<clr-icon class="alert-icon" shape="exclamation-circle"></clr-icon>-->
+        <!--</div>-->
+        <!--<span class="alert-text">{{ errorMessage }}</span>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
 
   <form (ngSubmit)="updateUser()">
 
