second-canDeactivate-confirm

--- a/src/app/alerts/alerts.component.html
+++ b/src/app/alerts/alerts.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
   </div>
-  <button type="button" class="close" aria-label="Close">
+  <button type="button" class="close" aria-label="Close" (click)="close()">
     <clr-icon aria-hidden="true" shape="close"></clr-icon>
   </button>
 </div>
