--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,6 +28,7 @@
         {{ errorMessage }}
       </div>
       <button type="submit" class="btn btn-primary">Войти</button>
+      <button class="btn btn-info" (click)="goToRegistration()">Регистрация</button>
     </div>
   </form>
 </div>
