--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,13 @@
         <span class="nav-text">Пользователи</span>
       </a>
       <a
+        routerLink="/posts"
+        routerLinkActive="active"
+        class="nav-link"
+      >
+        <span class="nav-text">Блог</span>
+      </a>
+      <a
         routerLink="/about"
         routerLinkActive="active"
         class="nav-link"
