--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -20,6 +20,7 @@
   <label for="color4">Default</label>
 </div>
 
+
 <div class="row" *ngFor="let post of posts | async">
   <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div class="card">
@@ -31,8 +32,9 @@
         [appHighlight]="color"
         [defaultColor]="'violet'"
       >
-        <div class="card-text" [innerHtml]="nl2br(post.body)"></div>
+        <div class="card-text" [appNl2br]="post.body"></div>
       </div>
     </div>
   </div>
 </div>
+
