--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -20,21 +20,23 @@
   <label for="color4">Default</label>
 </div>
 
-
-<div class="row" *ngFor="let post of posts | async">
-  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <div class="card">
-      <div class="card-header" appPrimaryColor>
-        {{post.title}}
-      </div>
-      <div
-        class="card-block"
-        [appHighlight]="color"
-        [defaultColor]="'violet'"
-      >
-        <div class="card-text" [appNl2br]="post.body"></div>
+<ng-container *appSpinner="showSpinner">
+  <div class="row" *ngFor="let post of posts | async ">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <div class="card">
+        <div class="card-header" appPrimaryColor>
+          {{post.title}}
+        </div>
+        <div
+          class="card-block"
+          [appHighlight]="color"
+          [defaultColor]="'violet'"
+        >
+          <div class="card-text" [appNl2br]="post.body"></div>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</ng-container>
+
 
